# plapo

./: README.md  RESTDesign.puml  pyproject.toml  serverless.yml  tasks.py
plapo/: __main__.py  controller.py  model.py  repository.py  sample.py  utils.py
plapo/src/: __main__.py  controller.py  repository.py  sample.py  utils.py
plapo/tests/: test_utils.py
src/: __main__.py  controller.py  model.py  repository.py  sample.py  utils.py
temp/: todo.txt
tests/: conftest.py  test_controller.py  test_repository.py  test_utils.py
tests/src/: test_repository.py  test_utils.py
