[tool.poetry]
name = "plapo"
version = "0.1.0"
description = ""
authors = ["oa-takahashi <oa-takahashi@kddi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.0"
black = "^20.8b1"
isort = "^5.6.4"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
moto = "^1.3.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
